@@ -378,6 +378,7 @@ Special Pages:
   account creation is disabled.
 * JavaScript filter for Special:Allmessages
 * (bug 3047) Don't mention talk pages on Special:Movepage when there isn't one
+* Show links to user page, talk page and contributions page on Special:Newpages
 
 Misc.:
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
